solve issue with navbar collapsing

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,12 +100,12 @@ html {
   scroll-behavior: smooth;
 }
 #navbar__logo{
-
+  flex-shrink: 1000;
   display: flex;
   align-items: left;
   cursor: pointer;
   width: auto;  /* Adjust size */
-  height: 120px;  /* Maintain aspect ratio */
+  height: 13vw;  /* Maintain aspect ratio */
   border-radius: 8px;
   margin-top: 2px;
   margin-bottom: 2px;
